CHANGES.txt - 2007-04-02
------------------------

CHANGES IN CUPS V1.3

	- Documentation updates (STR #1775, STR #2130, STR #2131)
	- Added support for the PWG printer-alert and
	  printer-alert-description attributes (STR #2088)
	- Added support for LPD "stream" mode (STR #2036)
	- The scheduler now reports the PostScript product string
	  from PPD files in CUPS-Get-PPDs responses (STR #1900)
	- Raw printing with queues pointing to the file pseudo-
	  device and multiple files and/or banners now works (STR
	  #1933)
	- Added new public cupsAdminGetServerSettings() and
	  cupsAdminSetServerSettings() APIs.
	- Added new "makebuttons" script in the "tools" directory
	  for creating web interface buttons (STR #2231)
	- Added support for DNS-SD (aka "Bonjour") printer sharing
	  (STR #1171)
	- Job operations (cancel, hold, release, etc.) from the
	  web interface now return back to the original page (STR
	  #2239)
	- The classes or printers list is now shown after a
	  successful deletion from the web interface (STR #1999)
	- The default configuration now allows browse packets from
	  any address (STR #2008)
	- The web interface now provides an "allow printing from the
	  Internet" check box (STR #1897)
	- The notify-events-default and
	  notify-lease-duration-default attributes can now be set
	  (STR #1671)
	- Server-side default options are now sent to clients when
	  the "printer-defaults" attribute group is requested (STR
	  #1923)
	- Added support for Linux "relro" linker option (STR #1614)
	- CUPS now validates the number-up option value (STR #1329)
	- The on-line help now provides better search capabilities
	  (STR #1701)
	- The web interface "Add This Printer" button now allows you
	  to change the printer name, description,  and location
	  (STR #1646)
	- Added support for Mac OS X authorization services
	  (STR #2206)
	- Added support for driver-specific pre-filters (STR #2108)
	- Added a new side-channel API for drivers and backends